fixed image methods and some refactoring